--- a/views/home.hbs
+++ b/views/home.hbs
@@ -39,26 +39,18 @@
         <h3 style="text-align: center" class="wow fadeIn">Work</h3>
         <div class="row" style="margin: 5% auto;">
             <div id="work1" class="col-lg-3 col-lg-offset-1 thumbnail text-center wow fadeInLeft">
-                <a href="#">
-                    <img src="img/computer.jpg" id="image1" class="image-responsive">
+                <a href="/project1">
+                    <img src="img/success.jpg" id="image1" class="image-responsive" width="300" height="200">
                     <div class="caption" id="caption1">
-                        <p>Lorem ipsum</p>
+                        <p>Web Development</p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-3 thumbnail text-center wow fadeInDown">
                 <a href="#">
-                    <img src="img/computer.jpg" id="image2" class="image-responsive">
+                    <img src="img/node.png" id="image2" class="image-responsive" width="300" height="200">
                     <div class="caption" id="caption2">
-                        <p>Lorem ipsum</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 thumbnail text-center wow fadeInRight">
-                <a href="#">
-                    <img src="img/computer.jpg" id="image3" class="image-responsive">
-                    <div class="caption" id="caption3">
-                        <p>Lorem ipsum</p>
+                        <p>Node.js Development</p>
                     </div>
                 </a>
             </div>
