--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -3,7 +3,7 @@
     <p class="footer-links">
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="https://github.com/adrielFab"><i class="fa fa-github"></i></a>
     </p>
 
     <p class="footer-company-name"><br/><br/>Developed by<br/> Adriel Fabella &copy; 2017</p>
