Crazy new update!

--- a/views/project1.hbs
+++ b/views/project1.hbs
@@ -19,22 +19,36 @@
     <link href="/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>
+<body class="projects">
 
-  <div class="container">
-    <div class="project-intro">
-        <h1>Web Development - Success Driving School </h1>
-    </div>
 
-    <div class="project-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-          nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in r
-          eprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+  <div class="jumbotron" id="project1">
+    <div class="container">
+      <p id="tags"><span class="bullet">&#9679</span> HTML CSS JavaScript PHP MySQL</p><br/>
+      <h2>Web Development</h2><br/>
+      <h4><em>Success Driving School</em></h4>
     </div>
+  </div>
+
+
+  <div class="container" style="padding-bottom: 50px;">
+        <p>The goal of this project was to <span id="p1">develop</span> a website intended for the public to know and be informed of the business'
+        offers and services</p>
+        <br/>
+        <p>The web application consists of two parts: the <span id="p1">public</span> and the <span id="p1">admin</span> (the client).</p>
+        <br/>
+        <p>On the public side, the task was more concentrated on coming up with a slick and interactive <span id="p1">web design</span>.
+          This includes doing research on the current trends, which fonts to use, how many pages should be included
+          and how should the layout look like.</p>
+        <br/>
+        <p>On the admin side, the task desired was to create an <span id="p1">admin page</span> which allows the user
+          to control the data that is being displayed. Evidently, a login system had to be implemented and a
+          simple user interface needed to be created</p>
+        <br/>
+
+        <a href="http://successdrivingschool.ca/" id="p1">Click here to be linked to the website</a>
+        <br/><br/>
+        <a href="/"><i class="fa fa-arrow-circle-o-left fa-3x" aria-hidden="true" style="color: #000;"></i></a>
   </div>
 
 
