--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ header {
 }
 
 img{
-  border: 1px solid rgba(104,174,200, 1.0);
+
 }
 
 /**Contact**/
@@ -180,15 +180,31 @@ img{
 
 /**Image divider**/
 .image-divider {
-    padding:15% 0;
+    padding: 3% 0;
+    width: 100%;
+    height: 430px;
     background:
             linear-gradient(
                     rgba(0,0,0, 0.5),
                     rgba(0,0,0, 0.90)
             ),
-            url("../img/tower.jpg");
+            url("../img/geometric.jpg");
     background-size: cover;
     background-position: center top;
+    text-align: center;
+}
+
+.image-divider h3{
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.image-divider p{
+    color: #fff;
+}
+
+.image-divider p #first{
+    font-weight: bold;
+    font-size: 30pt;
 }
 
 /**Footer**/
@@ -224,6 +240,75 @@ img{
     margin: 0 10px auto;
 }
 
+/*************************************************
+    Projects description pages
+**************************************************/
+
+.projects p{
+    font-size: 18px;
+}
+
+.jumbotron h2 {
+    font-size: 2em;
+    background: #fff;
+    display: inline-block;
+    padding: 6px;
+}
+
+.jumbotron h4{
+    background: #fff;
+    padding: 6px;
+    display: inline-block;
+    color: rgba(0,0,0, 0.6);
+}
+
+.jumbotron #tags{
+    background: #fff;
+    padding: 6px;
+    display: inline-block;
+    font-family: "Lato", sans-serif;
+    font-size: 18px;
+
+}
+
+#project1{
+    background:
+            linear-gradient(
+                    rgba(184, 39, 31, 1),
+                    rgba(184, 21, 67, 0.7)
+            ),
+            url("../img/abstract.jpg");
+    background-size: contain;
+}
+
+#p1{
+  color: rgba(184, 21, 67, 0.7);
+}
+
+#project2{
+    background:
+            linear-gradient(
+                    rgba(150, 184, 71, 1),
+                    rgba(100, 184, 67, 0.7)
+            ),
+            url("../img/abstract.jpg");
+    background-size: contain;
+}
+
+#cmd{
+    width: 400px;
+    height: 500px;
+    float: left;
+    margin-right: 30px;
+}
+
+.type-wrap{
+    text-align: center;
+    padding-top: 80px;
+    color: rgba(104,174,200, 1.0);
+    font-size: 40px;
+    font-family: 'Inconsolata', monospace;
+}
 /**Media Queries**/
 @media only screen and (max-width:1000px) {
     .wrapper {
