--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,6 +7,8 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <!-- Only for the typing -->
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
     <!-- CDN libraries -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -22,6 +24,13 @@
     <div class="intro">
         <h1>Adriel Fabella</h1>
         <h2>Software Engineering Student</h2>
+        <div class="type-wrap">
+            <div id="typed-strings">
+                <p>Code the World</p>
+                <p>Evolve the World</p>
+            </div>
+            <span id="typed" style="white-space:pre;"></span>
+        </div>
     </div>
 </header>
 
@@ -47,7 +56,7 @@
                 </a>
             </div>
             <div class="col-lg-3 thumbnail text-center wow fadeInDown">
-                <a href="#">
+                <a href="/project2">
                     <img src="img/node.png" id="image2" class="image-responsive" width="300" height="200">
                     <div class="caption" id="caption2">
                         <p>Node.js Development</p>
@@ -59,13 +68,30 @@
 </div><!--End of "wrapper"-->
 
 <section class="contact">
-    <div class="contact-content">
-        <h4>Have a project in mind? Email me:<a class="email" href="mailto:adriel.fab@gmail.com">a_fabell@live.concordia.ca</a></h4>
+    <div class="contact-content wow flipInY">
+        <h4>Want to chat? Email me: <a class="email" href="mailto:a_fabell@live.concordia.ca">a_fabell@live.concordia.ca</a></h4>
     </div>
 </section>
 
 <div class="image-divider">
+    <div class="container wow rotateInUpLeft">
+        <p><span id="first">Qu'attendez vous?</span><br/><span style="font-size: 14pt;">Download my resumes</p>
 
+          <div class="row">
+            <div class="col-lg-3">
+                <h3>Le Fran&ccedil;ais</h3>
+                <a href="/pdf/Resume_Fr.pdf" download>
+                    <i class="fa fa-file-pdf-o fa-5x"></i>
+                </a>
+            </div>
+            <div class="col-lg-offset-6 col-lg-3">
+                <h3>Le English</h3>
+                <a href="/pdf/Resume_en.pdf" download>
+                  <i class="fa fa-file-pdf-o fa-5x"></i>
+                </a>
+            </div>
+          </div>
+    </div>
 </div>
 
 {{> footer}}
@@ -73,9 +99,31 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://use.fontawesome.com/663f1e011b.js"></script>
 <script type="text/javascript" src="/javascript/wow.min.js"></script> <!--Licensing in other folder-->
+<script type="text/javascript" src="/javascript/typed.js"></script>
 <script type="text/javascript" src="/javascript/script.js"></script>
 <script>
     new WOW().init();
+
+    $(function(){
+
+        $("#typed").typed({
+            // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
+            stringsElement: $('#typed-strings'),
+            typeSpeed: 30,
+            backDelay: 500,
+            loop: false,
+            contentType: 'html', // or text
+            // defaults to false for infinite loop
+            loopCount: false,
+            callback: function(){ foo(); },
+            resetCallback: function() { newTyped(); }
+        });
+
+        $(".reset").click(function(){
+            $("#typed").typed('reset');
+        });
+
+    });
 </script>
 </body>
 
