Fixed pdf download link

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -86,7 +86,7 @@
             </div>
             <div class="col-lg-offset-6 col-lg-3">
                 <h3>Le English</h3>
-                <a href="/pdf/Resume_en.pdf" download>
+                <a href="/pdf/Resume_En.pdf" download>
                   <i class="fa fa-file-pdf-o fa-5x"></i>
                 </a>
             </div>
