--- a/public/css/style.css
+++ b/public/css/style.css
@@ -302,7 +302,7 @@ img{
     margin-right: 30px;
 }
 
-.type-wrap{
+.element{
     text-align: center;
     padding-top: 80px;
     color: rgba(104,174,200, 1.0);
