--- a/views/home.hbs
+++ b/views/home.hbs
@@ -24,13 +24,7 @@
     <div class="intro">
         <h1>Adriel Fabella</h1>
         <h2>Software Engineering Student</h2>
-        <div class="type-wrap">
-            <div id="typed-strings">
-                <p>Code the World</p>
-                <p>Evolve the World</p>
-            </div>
-            <span id="typed" style="white-space:pre;"></span>
-        </div>
+        <div class="element"></div>
     </div>
 </header>
 
@@ -101,30 +95,19 @@
 <script type="text/javascript" src="/javascript/wow.min.js"></script> <!--Licensing in other folder-->
 <script type="text/javascript" src="/javascript/typed.js"></script>
 <script type="text/javascript" src="/javascript/script.js"></script>
+
 <script>
-    new WOW().init();
-
     $(function(){
-
-        $("#typed").typed({
-            // strings: ["Typed.js is a <strong>jQuery</strong> plugin.", "It <em>types</em> out sentences.", "And then deletes them.", "Try it out!"],
-            stringsElement: $('#typed-strings'),
-            typeSpeed: 30,
-            backDelay: 500,
-            loop: false,
-            contentType: 'html', // or text
-            // defaults to false for infinite loop
-            loopCount: false,
-            callback: function(){ foo(); },
-            resetCallback: function() { newTyped(); }
+        $(".element").typed({
+            strings: ["Code the World.", "Evolve the World."],
+            typeSpeed: 0
         });
-
-        $(".reset").click(function(){
-            $("#typed").typed('reset');
-        });
-
     });
 </script>
+
+
+
+
 </body>
 
 </html>
