--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,8 +148,8 @@ header {
     visibility: hidden;
 }
 
-img{
-
+#img3{
+    height: 600px;
 }
 
 /**Contact**/
@@ -282,7 +282,11 @@ img{
 }
 
 #p1{
-  color: rgba(184, 21, 67, 0.7);
+    color: rgba(184, 21, 67, 0.7);
+}
+
+#p3{
+    color: rgba(80, 130, 200, 1);
 }
 
 #project2{
@@ -295,6 +299,16 @@ img{
     background-size: contain;
 }
 
+#project3{
+    background:
+            linear-gradient(
+                    rgba(80, 130, 200, 1),
+                    rgba(90, 170, 200, 0.7)
+            ),
+            url("../img/abstract.jpg");
+    background-size: contain;
+
+}
 #cmd{
     width: 400px;
     height: 500px;
