--- a/views/home.hbs
+++ b/views/home.hbs
@@ -70,13 +70,13 @@
 </div><!--End of "wrapper"-->
 
 <section class="contact">
-    <div class="contact-content wow flipInY">
-        <h4>Want to chat? Email me: <a class="email" href="mailto:a_fabell@live.concordia.ca">a_fabell@live.concordia.ca</a></h4>
+    <div class="contact-content wow bounceInUp">
+        <h4>Want to chat? Email me: <a class="email" href="mailto:adriel.fabella@gmail.com">adriel.fabella@gmail.com</a></h4>
     </div>
 </section>
 
 <div class="image-divider">
-    <div class="container wow rotateInUpLeft">
+    <div class="container wow fadeIn">
         <p><span id="first">Qu'attendez vous?</span><br/><span style="font-size: 14pt;">Download my resumes</p>
 
           <div class="row">
