--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,8 +1,7 @@
 <footer class="footer-basic-centered">
 
     <p class="footer-links">
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="https://ca.linkedin.com/in/adriel-fabella"><i class="fa fa-linkedin"></i></a>
         <a href="https://github.com/adrielFab"><i class="fa fa-github"></i></a>
     </p>
 
